# TSD_Compress

./: CMakeLists.txt  README.md
Compress/: CMakeLists.txt  Compress.cpp  Compress.h  Test.cpp
lib_out/: compress_dll.ilk
